# aiqore-back

./: .gitignore  ALEMBIC_ENCODING_FIX.md  DATABASE_SETUP.md  MIGRATION_TO_UV.md  QMT集成说明.md  README.md  UV_SETUP.md  alembic.ini  alembic_utf8.ps1  clean_redis_tasks.py  init_celery_results.py  init_db.py  pyproject.toml  requirements.txt  run.py  set_cursor_proxy.ps1  setup_postgres_port.ps1  setup_postgres_port.sh  start_celery_worker.bat  start_celery_worker.py  test_db_connection.py  test_qmt_api.py  test_redis_connection.py  update_securities.py  异步任务说明.md
.cursor/rules/: api-request-convention.mdc  data-source-abstraction.mdc  docs-sync.mdc  (+3 more)
alembic/: env.py
app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/: .gitignore  QMT集成说明.md  README.md  alembic.ini  alembic_wrapper.py  init_db.py  migrate_security_model.py  pyproject.toml  run.py  start_server.bat  异步任务说明.md
backend/alembic/versions/: 003_security_split_main_and_child_tables.py  004_add_data_source_connections.py  005_extend_security_symbol_length.py  006_add_strategy_model.py
backend/app/: celery_app.py  main.py
backend/app/api/: debug.py  market.py  security.py  strategy.py  task.py  trade.py
backend/app/models/: __init__.py  data_source_connection.py  sector.py  security.py  strategy.py
backend/app/services/: analysis_service.py  security_service.py  trade_service.py
backend/app/services/data_source/: cache.py
backend/app/services/data_source/adapter/: __init__.py  qmt.py
backend/app/tasks/: __init__.py  security_tasks.py  specs.py
backend/app/utils/: task_lock.py  task_manager.py
backend/backtest/: test_main.py
backend/backtest/strategy/: __init__.py
backend/scripts/: alembic_utf8.bat  probe_xtdata_time_format.py  qmt_debug.py
backend/scripts/experimental/: smoke_test_miniqmt.py
backtest/: __init__.py
docs/: 1-架构与概览.md  2-开发与运行.md  3-数据库与迁移.md  4-前端.md  5-API.md  6-QMT集成.md  7-异步任务.md  8-数据源抽象-前端对接.md  README.md
frontend/: README.md  fix-npm.ps1  index.html  package-lock.json  package.json  vite.config.js  使用说明.md  启动说明.md
scripts/: probe_xtdata_time_format.py  qmt_debug.py
(+75 files in other folders)
